features/rook-ceph-ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ceph-ingress
  labels:
    ingress: int
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`ceph.int.noodoodle.us`)
    services:
    - name: rook-ceph-mgr-dashboard
      namespace: rook-ceph
      port: 7000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: rook-ceph-nfs-ingress-tcp
spec:
  entryPoints:
  - nfs
  routes:
  - match: HostSNI(`*`)
    services:
    - name: rook-ceph-nfs-share-a
      namespace: rook-ceph
      port: 2049
      nativeLB: true
